# x6100_webserver

./: .gitignore  README.md  pyproject.toml
src/x6100_webserver/: __main__.py  apps.py  models.py  settings.py
src/x6100_webserver/static/css/: base.css
src/x6100_webserver/views/: bands.html  bands.tpl  base.html  base.tpl  digital_modes.html  files.html  ftx_bands.html  index.html  index.tpl  time.html
