[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "x6100-webserver"
authors = [
  {name = "Georgy Dyuldin", email = "g.dyuldin@gmail.com"},
]
description = "X6100 webserver for transceiver configuration"
dynamic = ["version"]
dependencies = [
  "bottle",
  "bottle-sqlite",
]

[project.scripts]
x6100_webserver = "x6100_webserver:__main__"

[tool.flit.sdist]
include = ["src/s6100_webserver/static/", "src/s6100_webserver/views/"]
